--- a/ui/pantry-ui/src/app/side-menu/side-menu.component.html
+++ b/ui/pantry-ui/src/app/side-menu/side-menu.component.html
@@ -1,6 +1,7 @@
 <mat-nav-list>
     <a mat-list-item [routerLink]="['/']" (click)="onLinkClick()">Home</a>
     <a mat-list-item [routerLink]="['/products']" (click)="onLinkClick()">Products</a>
+    <a mat-list-item [routerLink]="['/equipment']" (click)="onLinkClick()">Equipment</a>
     <a mat-list-item [routerLink]="['/shopping-list']" (click)="onLinkClick()">Shopping List</a>
     <a mat-list-item [routerLink]="['/recipes']" (click)="onLinkClick()">Recipes</a>
     <a mat-list-item [routerLink]="['/meal-plan']" (click)="onLinkClick()">Meal Plan</a>
